Alterado a pasta raiz para o autoload, adiconado a clas de notificações

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Joserocha\\CursoPhpComMysql\\": "public/"
+      "public\\": "public/"
     }
   },
   "authors": [
